manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: nginx
---
apiVersion: v1
kind: Service
metadata:
  name: ratelimiting-service
spec:
  ports:
  - port: 8080
    name: http
    targetPort: 8080
    protocol: TCP
  - port: 18000
    name: xds
    targetPort: 18000
    protocol: TCP
  selector:
    app: ratelimiting-service
