manifests/ingress.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: almost-ai 
spec:
  selector:
    istio: ingressgateway # use the default ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: http
    hosts:
    - "api.almost.ai"
    - "admin.almost.ai"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: api-almost-ai
spec:
  hosts:
  - "api.almost.ai"
  gateways:
  - almost-ai
  http:
  - route:
    - destination:
        host: nginx
        port:
          number: 80

---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: admin-almost-ai
spec:
  hosts:
  - "admin.almost.ai"
  gateways:
  - almost-ai
  http:
  - route:
    - destination:
        host: ratelimiting-service
        port:
          number: 8080
